<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.demo2.SetCourseActivity" >

    <GridLayout 
        android:layout_width="fill_parent"  
	    android:layout_height="wrap_content"  
	    android:orientation="vertical"  
	    android:rowCount="10"  
	    android:columnCount="2" >
        
        	<TextView
		        android:id="@+id/id_select_weekDay_text"
		        android:layout_width="wrap_content"
		        android:layout_height="match_parent"
		        android:textSize="20sp"
		        android:text="@string/select_weekDay_text" />
		    <Spinner 
		        android:id="@+id/id_weekDay_select"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        
		        />
        	<TextView
		        android:id="@+id/id_select_CourseId_text"
		        android:layout_width="wrap_content"
		        android:layout_height="match_parent"
		        android:textSize="20sp"
		        android:text="@string/select_course_text" />
		    <Spinner 
		        android:id="@+id/id_course_select"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        />
	        <TextView
			        android:id="@+id/id_select_Loacation_text"
			        android:layout_width="wrap_content"
			        android:layout_height="match_parent"
			        android:textSize="20sp"
			        android:text="@string/select_location_text" />
	        <EditText 
	            android:id="@+id/id_location_editText"
	            android:layout_width="match_parent"
			    android:layout_height="match_parent"
			    android:inputType="text"
	            />
	         <TextView
			        android:id="@+id/id_select_courseName_text"
			        android:layout_width="wrap_content"
			        android:layout_height="match_parent"
			        android:textSize="20sp"
			        android:text="@string/select_courseName_text" />
	        <EditText 
	            android:id="@+id/id_courseName_editText"
	            android:layout_width="match_parent"
			    android:layout_height="match_parent"
			    android:inputType="text"
	            />
	        <TextView
			        android:id="@+id/id_select_teacherName_text"
			        android:layout_width="wrap_content"
			        android:layout_height="match_parent"
			        android:textSize="20sp"
			        android:text="@string/select_teacherName_text" />
	        <EditText 
	            android:id="@+id/id_teacherName_editText"
	            android:layout_width="match_parent"
			    android:layout_height="match_parent"
			    android:inputType="text"
	            />
        </GridLayout>
        <Button 
            android:id="@+id/id_save_btn"
            android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/save"
			android:layout_alignParentBottom="true"
            />
</RelativeLayout>
